--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h3{
   font-family: text;
   font-style: normal;
   font-size: 18px;
-  color: #FF6EC7;
+  font-color: #FF6EC7;
 }
 
 a:link, a:active, a:visited {
